can parse json file. render Intro chapter into webpage

--- a/template.html
+++ b/template.html
@@ -1,12 +1,22 @@
-<div>
-  <h4>{{.PageTitle}}</h4>
-  <ul>
-    <li>{{.SomeProp}}</li>
-    <li>420 Yolo Swag</li>
-    <li>420 Yolo Swag</li>
-    <li>420 Yolo Swag</li>
-    <li>420 Yolo Swag</li>
-    <li>420 Yolo Swag</li>
-    <li>420 Yolo Swag</li>
-  </ul>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CYOA</title>
+  </head>
+  <body>
+    <h1>{{.Intro.Title}}</h1>
+    <main>
+      {{range .Intro.Story}}
+      <p>{{.}}</p>
+      {{end}}
+    </main>
+    <footer>
+      {{ range .Intro.Options}}
+      <p><span>{{.Text}} -></span> <button>{{.Chapter}}</button></p>
+      {{end}}
+    </footer>
+  </body>
+</html>
